[gd_scene load_steps=14 format=3 uid="uid://c23mkal03nk45"]

[ext_resource type="PackedScene" uid="uid://d26543ubrvlv7" path="res://scenes/base_entity.tscn" id="1_yxnpw"]
[ext_resource type="Script" path="res://scripts/mob.gd" id="2_c4gs6"]
[ext_resource type="Script" path="res://scripts/State Machine.gd" id="3_fnkcm"]
[ext_resource type="Script" path="res://scripts/wander_state.gd" id="4_d7njr"]
[ext_resource type="Script" path="res://scripts/chase_state.gd" id="5_1duql"]
[ext_resource type="Script" path="res://scripts/attack_state.gd" id="6_calw4"]
[ext_resource type="Script" path="res://scripts/hurt_state.gd" id="7_gqxc3"]
[ext_resource type="PackedScene" uid="uid://3irbhf3kcg6a" path="res://scenes/hitpoints_container.tscn" id="9_xxbht"]
[ext_resource type="Texture2D" uid="uid://cpvk1udv8qqvp" path="res://icons/lvl_icon.png" id="10_0jt7o"]
[ext_resource type="PackedScene" uid="uid://crgass4c8kjy0" path="res://scenes/empty_hitpoints_container.tscn" id="10_frqtg"]
[ext_resource type="Texture2D" uid="uid://ctroymoha6e01" path="res://icons/purepng.com-musclemusclemuscle-manbody-builderssix-packmuscle-boysclipart-1421526926338lnu1b.png" id="11_qp1di"]

[sub_resource type="CircleShape2D" id="CircleShape2D_850rr"]
radius = 137.131

[sub_resource type="CircleShape2D" id="CircleShape2D_vcl7v"]
radius = 13.0

[node name="mob" instance=ExtResource("1_yxnpw")]
top_level = true
z_index = 1
collision_layer = 4
collision_mask = 7
script = ExtResource("2_c4gs6")
max_hitpoints = 5
hitpoints = 5

[node name="Hurtbox" parent="." index="4"]
collision_layer = 4
collision_mask = 2

[node name="Hitbox" parent="." index="5"]
collision_layer = 4
collision_mask = 2
monitoring = true

[node name="StateMachine" type="Node" parent="." index="6" node_paths=PackedStringArray("state")]
script = ExtResource("3_fnkcm")
state = NodePath("WanderState")

[node name="WanderState" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("4_d7njr")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="Chase" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("5_1duql")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="AttackState" type="Node" parent="StateMachine" index="2"]
script = ExtResource("6_calw4")

[node name="HurtState" type="Node" parent="StateMachine" index="3" node_paths=PackedStringArray("actor", "animation_player")]
script = ExtResource("7_gqxc3")
actor = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="objective_detection_area" type="Area2D" parent="." index="7"]
visible = false
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="objective_detection_area" index="0"]
shape = SubResource("CircleShape2D_850rr")

[node name="basic_attack_area" type="Area2D" parent="." index="8"]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="basic_attack_area" index="0"]

[node name="empty_hitpoints_container" parent="." index="9" instance=ExtResource("10_frqtg")]

[node name="hitpoints_container" parent="." index="10" instance=ExtResource("9_xxbht")]

[node name="mob_icon" type="TextureRect" parent="." index="11"]
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="." index="12"]
visible = false
z_index = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer" index="0"]
layout_mode = 2
columns = 2

[node name="mob_icon2" type="TextureRect" parent="PanelContainer/MarginContainer/GridContainer" index="0"]
layout_mode = 2
expand_mode = 2

[node name="tooltip_title" type="Label" parent="PanelContainer/MarginContainer/GridContainer" index="1"]
layout_mode = 2
text = "Mob info"

[node name="mob_level_rect" type="TextureRect" parent="PanelContainer/MarginContainer/GridContainer" index="2"]
layout_mode = 2
texture = ExtResource("10_0jt7o")
expand_mode = 2

[node name="mob_level_lbl" type="Label" parent="PanelContainer/MarginContainer/GridContainer" index="3"]
layout_mode = 2

[node name="mob_power_rect" type="TextureRect" parent="PanelContainer/MarginContainer/GridContainer" index="4"]
layout_mode = 2
texture = ExtResource("11_qp1di")
expand_mode = 2

[node name="mob_power_lbl" type="Label" parent="PanelContainer/MarginContainer/GridContainer" index="5"]
layout_mode = 2

[node name="tooltip_info_area" type="Area2D" parent="." index="13"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tooltip_info_area" index="0"]
position = Vector2(2, 4)
shape = SubResource("CircleShape2D_vcl7v")

[connection signal="mouse_entered" from="tooltip_info_area" to="." method="_on_tooltip_info_area_mouse_entered"]
[connection signal="mouse_exited" from="tooltip_info_area" to="." method="_on_tooltip_info_area_mouse_exited"]
